--- a/Impilo App/MainWindow.xaml
+++ b/Impilo App/MainWindow.xaml
@@ -77,7 +77,7 @@
         <Button x:Name="btnScreening" Content="Screening" HorizontalAlignment="Left" Margin="187,114,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="btnScreening_Click" RenderTransformOrigin="0.485,-0.165"/>
         <Button x:Name="button_Copy2" Content="Clinic Visit" HorizontalAlignment="Left" Margin="520,114,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="button_Copy2_Click"/>
         <Button x:Name="button_Copy3" Content="Household Info" HorizontalAlignment="Left" Margin="684,114,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16"/>
-        <Menu HorizontalAlignment="Left" Height="22" VerticalAlignment="Top" Width="1328" Margin="0,0,-0.2,0">
+        <Menu HorizontalAlignment="Left" Height="22" VerticalAlignment="Top" Width="1328" Margin="0,0,-0.2,0" Name="mnuMain">
             <MenuItem Header="Home" Name="HomePage" Click="HomePage_Click_1"/>
             <MenuItem Header="CHOW">
                 <MenuItem Name="AddChow" Click="AddChow_Click" Header="Add a CHOW" HorizontalAlignment="Left" Width="165" Margin="0,0,-25.8,0"/>
