--- a/Impilo App/MainWindow.xaml
+++ b/Impilo App/MainWindow.xaml
@@ -42,41 +42,17 @@
         <!--<Image Height="50" HorizontalAlignment="Left" Margin="741,12,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="347"  Grid.Column="1" />-->
         <Image Height="65" HorizontalAlignment="Left" Margin="12,22,0,0" Name="image2" Stretch="Fill" VerticalAlignment="Top" Width="85" Source="/Images/Logo2.png" />
         <!--<Image Height="20" HorizontalAlignment="Left" Margin="761,84,0,0" Name="image3" Stretch="Fill" VerticalAlignment="Top" Width="327"  Grid.Column="1" />-->
-        <Label  Height="33" HorizontalAlignment="Left" Margin="282,67,0,0" VerticalAlignment="Top" FontSize="16" Width="99" FontWeight="Bold">Loggged in:</Label>
-        <TextBlock Height="58" HorizontalAlignment="Left" Margin="282,10,0,0" Name="textBlock3" Text="Impilo Client Management System" VerticalAlignment="Top" Width="629" FontSize="40" FontStretch="Expanded" TextWrapping="WrapWithOverflow" TextTrimming="WordEllipsis" Background="{x:Null}">
-            <TextBlock.Foreground>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FF63637C" Offset="0.586" />
-                    <GradientStop Color="#926849FF" Offset="1" />
-                    <GradientStop Color="#AE4C35BB" Offset="0" />
-                    <GradientStop Color="#BF3C2A94" Offset="0.429" />
-                    <GradientStop Color="#B87C71B1" Offset="0.907" />
-                    <GradientStop Color="#C181C191" Offset="0.436" />
-                </LinearGradientBrush>
-            </TextBlock.Foreground>
-            <TextBlock.TextEffects>
-                <TextEffect>
-                    <TextEffect.Foreground>
-                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="Black" Offset="0.169" />
-                            <GradientStop Color="White" Offset="0.395" />
-                            <GradientStop Color="#FF67806E" Offset="0" />
-                            <GradientStop Color="#FF959595" Offset="0.686" />
-                            <GradientStop Color="#FF7CB4CE" Offset="1" />
-                        </LinearGradientBrush>
-                    </TextEffect.Foreground>
-                </TextEffect>
-            </TextBlock.TextEffects></TextBlock>
-        <Label  Height="33" HorizontalAlignment="Left" Margin="386,67,0,0" VerticalAlignment="Top" FontSize="16" Width="346"  FontWeight="Bold" Content="Nomonde Khoza"/>
-        <Label  Height="33" HorizontalAlignment="Left" Margin="548,67,0,0" VerticalAlignment="Top" FontSize="16" Width="99" FontWeight="Bold" Content="Date:"/>
-        <Label x:Name="cboDate"  Height="33" HorizontalAlignment="Left" Margin="613,67,0,0" VerticalAlignment="Top" FontSize="16" Width="218" FontWeight="Bold" Content="20 December 2015" FontStyle="Italic"/>
-        <Label  Height="33" HorizontalAlignment="Left" Margin="831,67,0,0" VerticalAlignment="Top" FontSize="16" Width="99" FontWeight="Bold" Content="Time:"/>
-        <Label x:Name="lbTime"  Height="33" HorizontalAlignment="Left" Margin="935,67,0,0" VerticalAlignment="Top" FontSize="16" Width="289" FontWeight="Bold" Content="20:33:55" FontStyle="Italic"/>
-        <Button x:Name="btnNewClient" Content="New Client" HorizontalAlignment="Left" Margin="19,114,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="btnNewClient_Click"/>
-        <Button x:Name="btnFollowUp" Content="Follow-Up Visit" HorizontalAlignment="Left" Margin="348,114,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="btnFollowUp_Click"/>
-        <Button x:Name="btnScreening" Content="Screening" HorizontalAlignment="Left" Margin="187,114,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="btnScreening_Click" RenderTransformOrigin="0.485,-0.165"/>
-        <Button x:Name="button_Copy2" Content="Clinic Visit" HorizontalAlignment="Left" Margin="520,114,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="button_Copy2_Click"/>
-        <Button x:Name="button_Copy3" Content="Household Info" HorizontalAlignment="Left" Margin="684,114,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16"/>
+        <Label  Height="33" HorizontalAlignment="Left" Margin="954,21,0,0" VerticalAlignment="Top" FontSize="16" Width="99" FontWeight="Bold">Loggged in:</Label>
+        <Label  Height="33" HorizontalAlignment="Left" Margin="1058,21,0,0" VerticalAlignment="Top" FontSize="16" Width="241"  FontWeight="SemiBold" Content="Nomonde Khoza"/>
+        <Label  Height="33" HorizontalAlignment="Left" Margin="954,52,0,0" VerticalAlignment="Top" FontSize="16" Width="60" FontWeight="Bold" Content="Date:"/>
+        <Label x:Name="cboDate"  Height="33" HorizontalAlignment="Left" Margin="1004,52,0,0" VerticalAlignment="Top" FontSize="16" Width="166" FontWeight="SemiBold" Content="20 December 2015" />
+        <Label  Height="33" HorizontalAlignment="Left" Margin="1151,52,0,0" VerticalAlignment="Top" FontSize="16" Width="62" FontWeight="Bold" Content="Time:"/>
+        <Label x:Name="lbTime"  Height="33" HorizontalAlignment="Left" Margin="1209,52,-5.6,0" VerticalAlignment="Top" FontSize="16" Width="123" FontWeight="SemiBold" Content="20:33:55" />
+        <Button x:Name="btnNewClient" Content="New Client" HorizontalAlignment="Left" Margin="108,47,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="btnNewClient_Click"/>
+        <Button x:Name="btnFollowUp" Content="Follow-Up Visit" HorizontalAlignment="Left" Margin="437,47,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="btnFollowUp_Click"/>
+        <Button x:Name="btnScreening" Content="Screening" HorizontalAlignment="Left" Margin="276,47,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="btnScreening_Click" RenderTransformOrigin="0.485,-0.165"/>
+        <Button x:Name="button_Copy2" Content="Clinic Visit" HorizontalAlignment="Left" Margin="609,47,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="button_Copy2_Click"/>
+        <Button x:Name="button_Copy3" Content="Household Info" HorizontalAlignment="Left" Margin="773,47,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16"/>
         <Menu HorizontalAlignment="Left" Height="22" VerticalAlignment="Top" Width="1328" Margin="0,0,-0.2,0" Name="mnuMain">
             <MenuItem Header="Home" Name="HomePage" Click="HomePage_Click_1"/>
             <MenuItem Header="CHOW">
@@ -98,6 +74,8 @@
                 <MenuItem Header="Clinic" Name="ClinicImport" Click="ClinicImport_Click" HorizontalAlignment="Left" Width="139.2"/>
             </MenuItem>
         </Menu>
+
+
 
         <!--<TextBlock Height="68" HorizontalAlignment="Left" Margin="205,10,0,0" Name="textBlock3" Text="Impilo Client Management System" VerticalAlignment="Top" FontSize="48" Width="802" FontWeight="Bold">
             <TextBlock.Foreground>
