--- a/Impilo App/MainWindow.xaml
+++ b/Impilo App/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:pageTransitions="clr-namespace:WpfPageTransitions;assembly=WpfPageTransitions"
-        Title="Impilo Client Management System" Height="750" Width="1334.6" ResizeMode="CanResizeWithGrip" ShowInTaskbar="False">
+        Title="Impilo Client Management System" Height="750" Width="1334.6" ResizeMode="CanResizeWithGrip" WindowStartupLocation="CenterScreen" WindowState="Maximized" Topmost="True">
 
 
     <Grid Margin="0,0,0.2,1.2">
